force-app/main/default/objects/Commissioning_Procedure__c/Commissioning_Procedure__c.object-meta.xml
<CustomObject>
    <description>Commissioning procedure documents per system, tracking step completion progress and approval status.</description>
    <label>Commissioning Procedure</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Procedure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissioning Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>