force-app/main/default/objects/Commissioning_Procedure__c/fields/Proc_System__c.field-meta.xml
<CustomField>
    <fullName>Proc_System__c</fullName>
    <label>System</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>