force-app/main/default/objects/Commissioning_Procedure__c/fields/Procedure_Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Doc_URL__c</fullName>
    <label>Procedure Document URL</label>
    <type>Url</type>
</CustomField>