force-app/main/default/objects/Commissioning_Procedure__c/fields/Steps_Complete__c.field-meta.xml
<CustomField>
    <fullName>Steps_Complete__c</fullName>
    <label>Steps Complete</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>