force-app/main/default/objects/Commissioning_Procedure__c/fields/Steps_Total__c.field-meta.xml
<CustomField>
    <fullName>Steps_Total__c</fullName>
    <label>Total Steps</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>